apps/authority/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: authority
  name: authority
  namespace: authority
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authority
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dev-app
    spec:
      containers:
        - image: falyoun/cleverbit:authority-latest
          name: authority
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
