apps/authority/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authority
  namespace: authority
  labels:
    app: authority
spec:
  type: ClusterIP
  selector:
    app: authority
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
