apps/authority/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: authority-gateway
  namespace: istio-system
  annotations:
    fluxcd.io/ignore: "false"
spec:
  selector:
    name: istio-ingress
  servers:
    - hosts:
        - authority.cb-interview.com
      port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        mode: PASSTHROUGH
