apps/authority/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authority
  namespace: istio-system
spec:
  hosts:
    - authority.cb-interview.com
  gateways:
    - authority-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: authority.authority.svc.cluster.local
            port:
              number: 80
